--- a/bot/docker-compose.yml
+++ b/bot/docker-compose.yml
@@ -15,12 +15,17 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   kerne-sentinel:
     build: .
     container_name: kerne-sentinel
     restart: always
-    command: ["uvicorn", "bot.sentinel.api:app", "--host", "0.0.0.0", "--port", "8080"]
+    command: ["uvicorn", "sentinel.api:app", "--host", "0.0.0.0", "--port", "8080"]
     env_file:
       - .env
     ports:
@@ -33,3 +38,29 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
+
+  kerne-guardian:
+    build: .
+    container_name: kerne-guardian
+    restart: always
+    command: ["python", "sentinel/risk_engine.py"]
+    env_file:
+      - .env
+    volumes:
+      - ./.env:/app/.env
+      - ../out:/app/out
+    healthcheck:
+      test: ["CMD", "python", "-c", "import os; exit(0 if os.path.exists('sentinel/risk_engine.py') else 1)"]
+      interval: 60s
+      timeout: 10s
+      retries: 5
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
