[2026-01-12] infrastructure: Institutional Deep Hardening of all 14 priorities

--- a/bot/docker-compose.yml
+++ b/bot/docker-compose.yml
@@ -10,6 +10,14 @@ services:
     volumes:
       - ./.env:/app/.env
       - ../out:/app/out
+    deploy:
+      resources:
+        limits:
+          cpus: '0.50'
+          memory: 512M
+        reservations:
+          cpus: '0.25'
+          memory: 256M
     healthcheck:
       test: ["CMD", "python", "-c", "import os; exit(0 if os.path.exists('main.py') else 1)"]
       interval: 30s
@@ -18,8 +26,8 @@ services:
     logging:
       driver: "json-file"
       options:
-        max-size: "10m"
-        max-file: "3"
+        max-size: "50m"
+        max-file: "5"
 
   kerne-sentinel:
     build: .
@@ -33,6 +41,11 @@ services:
     volumes:
       - ./.env:/app/.env
       - ../out:/app/out
+    deploy:
+      resources:
+        limits:
+          cpus: '1.0'
+          memory: 1G
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
       interval: 30s
@@ -41,8 +54,8 @@ services:
     logging:
       driver: "json-file"
       options:
-        max-size: "10m"
-        max-file: "3"
+        max-size: "50m"
+        max-file: "5"
 
   kerne-guardian:
     build: .
@@ -54,6 +67,11 @@ services:
     volumes:
       - ./.env:/app/.env
       - ../out:/app/out
+    deploy:
+      resources:
+        limits:
+          cpus: '1.0'
+          memory: 1G
     healthcheck:
       test: ["CMD", "python", "-c", "import os; exit(0 if os.path.exists('sentinel/risk_engine.py') else 1)"]
       interval: 60s
@@ -62,5 +80,5 @@ services:
     logging:
       driver: "json-file"
       options:
-        max-size: "10m"
-        max-file: "3"
+        max-size: "50m"
+        max-file: "5"
