[2026-01-12] contracts: Fix compilation and align test suites with institutional hardening

--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,9 @@
 	path = DefiLlama-Adapters
 	url = https://github.com/kerne-protocol/DefiLlama-Adapters.git
 	branch = main
+[submodule "lib/LayerZero-v2"]
+	path = lib/LayerZero-v2
+	url = https://github.com/LayerZero-Labs/LayerZero-v2
+[submodule "lib/solidity-bytes-utils"]
+	path = lib/solidity-bytes-utils
+	url = https://github.com/GNSPS/solidity-bytes-utils
