[2026-01-15] contracts: prep omnichain OFT deployment

--- a/foundry.toml
+++ b/foundry.toml
@@ -10,9 +10,13 @@ via_ir = true
 
 [rpc_endpoints]
 base = "https://mainnet.base.org"
+arbitrum = "${ARBITRUM_RPC_URL}"
+optimism = "${OPTIMISM_RPC_URL}"
 
 [etherscan]
 base = { key = "${BASESCAN_API_KEY}", url = "https://api.basescan.org/api" }
+arbitrum = { key = "${ARBISCAN_API_KEY}", url = "https://api.arbiscan.io/api" }
+optimism = { key = "${OPTIMISM_SCAN_API_KEY}", url = "https://api-optimistic.etherscan.io/api" }
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md
 
