--- a/bot/requirements.txt
+++ b/bot/requirements.txt
@@ -4,3 +4,8 @@ pandas==2.2.0     # For data analysis and CSV handling
 python-dotenv==1.0.1 # For security (loading private keys)
 loguru==0.7.2     # For professional logging
 requests==2.31.0  # For generic API calls
+numpy==1.26.4     # For numerical calculations
+scipy==1.12.0     # For statistical models (VaR)
+prometheus_client==0.19.0 # For metrics
+httpx==0.26.0      # For async HTTP
+
