[2026-01-17] bot: prepare ZIN solver live mode

--- a/bot/.env.example
+++ b/bot/.env.example
@@ -16,3 +16,7 @@ KERNE_OFT_V2_ADDRESS=0x...
 DISCORD_WEBHOOK_URL=your_discord_webhook_url
 BASESCAN_API_KEY=your_basescan_api_key
 EXCHANGE_DEPOSIT_ADDRESS=0x...
+ZIN_SOLVER_LIVE=false
+ZIN_EXECUTOR_ADDRESS=0x...
+PROFIT_VAULT_ADDRESS=0x...
+ONE_INCH_API_KEY=your_1inch_api_key
