[2026-01-17] docs: log next-step recommendation

--- a/bot/.env.example
+++ b/bot/.env.example
@@ -16,7 +16,34 @@ KERNE_OFT_V2_ADDRESS=0x...
 DISCORD_WEBHOOK_URL=your_discord_webhook_url
 BASESCAN_API_KEY=your_basescan_api_key
 EXCHANGE_DEPOSIT_ADDRESS=0x...
+# =============================================================================
+# ZIN (Zero-Fee Intent Network) Configuration
+# =============================================================================
+# ZIN transforms Kerne into Base's primary execution engine for high-volume trading.
+# It monitors CowSwap and UniswapX for profitable intents and fulfills them using
+# Kerne's internal liquidity, capturing the spread as profit.
+
+# Enable live mode (set to true to execute real transactions)
 ZIN_SOLVER_LIVE=false
-ZIN_EXECUTOR_ADDRESS=0x...
+
+# Deployed ZIN contract addresses (Base Mainnet)
+ZIN_EXECUTOR_ADDRESS=0x04F52F9F4dAb1ba2330841Af85dAeeB8eaC9E995
+ZIN_POOL_ADDRESS=0xB9BdF6F3Fc3819b61f6fE799bE1395501822d0c7
+
+# Profit vault - where captured spreads are deposited
 PROFIT_VAULT_ADDRESS=0x...
+
+# 1inch API key for aggregated swap quotes (required for live mode)
+# Get your API key at: https://portal.1inch.dev/
 ONE_INCH_API_KEY=your_1inch_api_key
+
+# Active chain for UniswapX order fetching (base, arbitrum, mainnet, unichain)
+ACTIVE_CHAIN=base
+
+# =============================================================================
+# RPC Configuration (with fallback support)
+# =============================================================================
+BASE_RPC_URL=https://mainnet.base.org
+# Alternative RPCs (used as fallback):
+# - https://base.llamarpc.com
+# - https://base.drpc.org
