[2026-01-17] bot: add ZIN micro-cap guardrails

--- a/bot/.env.example
+++ b/bot/.env.example
@@ -40,6 +40,17 @@ ONE_INCH_API_KEY=your_1inch_api_key
 # Active chain for UniswapX order fetching (base, arbitrum, mainnet, unichain)
 ACTIVE_CHAIN=base
 
+# ZIN micro-cap guardrails (live mode safety limits)
+ZIN_MIN_PROFIT_BPS=8
+ZIN_MAX_INTENT_AMOUNT=0
+ZIN_MAX_GAS_PRICE_GWEI=40
+ZIN_MAX_INTENTS_PER_CYCLE=2
+ZIN_MIN_ORDER_TTL_SECONDS=30
+ZIN_MAX_PRICE_IMPACT_BPS=75
+# Per-token caps (format: SYMBOL:amount or address:amount, comma-separated)
+# Example: WETH:25000000000000000,USDC:5000000
+ZIN_MAX_INTENT_AMOUNT_BY_TOKEN=
+
 # =============================================================================
 # RPC Configuration (with fallback support)
 # =============================================================================
