[2026-01-20] bot: enable multi-chain ZIN solver

--- a/bot/.env.example
+++ b/bot/.env.example
@@ -38,6 +38,7 @@ PROFIT_VAULT_ADDRESS=0x...
 ONE_INCH_API_KEY=your_1inch_api_key
 
 # Active chain for UniswapX order fetching (base, arbitrum, mainnet, unichain)
+ZIN_CHAINS=base,arbitrum
 ACTIVE_CHAIN=base
 
 # ZIN micro-cap guardrails (live mode safety limits)
