[2026-01-21] bot: Add automated daily profit telemetry scheduler

--- a/bot/.env.example
+++ b/bot/.env.example
@@ -53,6 +53,29 @@ ZIN_MAX_PRICE_IMPACT_BPS=75
 ZIN_MAX_INTENT_AMOUNT_BY_TOKEN=
 
 # =============================================================================
+# Telemetry & Daily Reporting Configuration
+# =============================================================================
+# Automated daily profit reporting system that posts to Discord and saves
+# markdown reports to docs/reports/
+
+# Schedule: Hour (UTC) when daily report runs (default: 9:00 AM UTC)
+TELEMETRY_HOUR_UTC=9
+TELEMETRY_MINUTE_UTC=0
+
+# Run telemetry immediately on container startup (default: true)
+TELEMETRY_RUN_ON_STARTUP=true
+
+# Override for testing: Fixed interval in hours (leave empty for daily schedule)
+# Examples: "1" = hourly, "0.5" = every 30 minutes, "" = daily at scheduled time
+TELEMETRY_INTERVAL_HOURS=
+
+# =============================================================================
+# Arbitrum Configuration
+# =============================================================================
+ARBITRUM_RPC_URL=https://arb1.arbitrum.io/rpc
+ARBITRUM_ZIN_POOL_ADDRESS=0x5D8ddE6264DF8A0963253693f32e057e1aA37aFD
+
+# =============================================================================
 # RPC Configuration (with fallback support)
 # =============================================================================
 BASE_RPC_URL=https://mainnet.base.org
