--- a/bot/docker-compose.yml
+++ b/bot/docker-compose.yml
@@ -135,3 +135,42 @@ services:
       options:
         max-size: "50m"
         max-file: "5"
+
+  # Daily Profit Telemetry - Automated reporting to Discord and docs/reports/
+  kerne-telemetry:
+    build: .
+    container_name: kerne-telemetry
+    restart: always
+    command: ["python", "telemetry_scheduler.py"]
+    env_file:
+      - .env
+    environment:
+      # Run daily at 9:00 AM UTC (2:00 AM Denver, 4:00 PM London)
+      - TELEMETRY_HOUR_UTC=9
+      - TELEMETRY_MINUTE_UTC=0
+      # Run immediately on startup, then daily
+      - TELEMETRY_RUN_ON_STARTUP=true
+      # For testing: set to "1" for hourly, "0.5" for 30 min (leave empty for daily)
+      - TELEMETRY_INTERVAL_HOURS=
+    volumes:
+      - ./.env:/app/.env
+      - ../docs/reports:/app/docs/reports
+      - ../out:/app/out
+    deploy:
+      resources:
+        limits:
+          cpus: '0.25'
+          memory: 256M
+        reservations:
+          cpus: '0.1'
+          memory: 128M
+    healthcheck:
+      test: ["CMD", "python", "-c", "import os; exit(0 if os.path.exists('telemetry_scheduler.py') else 1)"]
+      interval: 60s
+      timeout: 10s
+      retries: 3
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "50m"
+        max-file: "5"
