[2026-01-21] ops: document PoR automation + ZIN thread

--- a/bot/.env.example
+++ b/bot/.env.example
@@ -70,10 +70,38 @@ TELEMETRY_RUN_ON_STARTUP=true
 TELEMETRY_INTERVAL_HOURS=
 
 # =============================================================================
+# Proof of Reserve (PoR) Configuration
+# =============================================================================
+# Automated daily solvency attestation system that:
+# - Aggregates on-chain assets across Base + Arbitrum vaults
+# - Verifies off-chain CEX equity (Hyperliquid)
+# - Signs cryptographic attestations
+# - Generates public JSON for API consumption
+# - The "Glass House Standard" - proving every asset is accounted for
+
+# Schedule: Hour (UTC) when daily PoR runs (default: 00:00 UTC / Midnight)
+POR_HOUR_UTC=0
+POR_MINUTE_UTC=0
+
+# Run PoR immediately on container startup (default: true)
+POR_RUN_ON_STARTUP=true
+
+# Post attestation results to Discord (default: true)
+POR_POST_DISCORD=true
+
+# Override for testing: Fixed interval in hours (leave empty for daily schedule)
+# Examples: "1" = hourly, "0.5" = every 30 minutes, "" = daily at scheduled time
+POR_INTERVAL_HOURS=
+
+# ETH price in USD for off-chain equity conversion (fallback if no oracle)
+ETH_PRICE_USD=3300
+
+# =============================================================================
 # Arbitrum Configuration
 # =============================================================================
 ARBITRUM_RPC_URL=https://arb1.arbitrum.io/rpc
 ARBITRUM_ZIN_POOL_ADDRESS=0x5D8ddE6264DF8A0963253693f32e057e1aA37aFD
+ARBITRUM_VAULT_ADDRESS=0x503D930dF68a68cdFeb8DEa173ADD8DD377841FF
 
 # =============================================================================
 # RPC Configuration (with fallback support)
