--- a/bot/docker-compose.yml
+++ b/bot/docker-compose.yml
@@ -136,6 +136,47 @@ services:
         max-size: "50m"
         max-file: "5"
 
+  # Daily Proof of Reserve - Institutional-grade solvency attestation
+  kerne-por:
+    build: .
+    container_name: kerne-por
+    restart: always
+    command: ["python", "por_scheduler.py"]
+    env_file:
+      - .env
+    environment:
+      # Run daily at 00:00 UTC (Midnight - clean daily boundary)
+      - POR_HOUR_UTC=0
+      - POR_MINUTE_UTC=0
+      # Run immediately on startup, then daily
+      - POR_RUN_ON_STARTUP=true
+      # Post attestation results to Discord
+      - POR_POST_DISCORD=true
+      # For testing: set to "1" for hourly, "0.5" for 30 min (leave empty for daily)
+      - POR_INTERVAL_HOURS=
+    volumes:
+      - ./.env:/app/.env
+      - ../docs/reports:/app/docs/reports
+      - ../out:/app/out
+    deploy:
+      resources:
+        limits:
+          cpus: '0.25'
+          memory: 256M
+        reservations:
+          cpus: '0.1'
+          memory: 128M
+    healthcheck:
+      test: ["CMD", "python", "-c", "import os; exit(0 if os.path.exists('por_scheduler.py') else 1)"]
+      interval: 60s
+      timeout: 10s
+      retries: 3
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "50m"
+        max-file: "5"
+
   # Daily Profit Telemetry - Automated reporting to Discord and docs/reports/
   kerne-telemetry:
     build: .
