[2026-01-21] bot: add KERNE buyback flywheel automation

--- a/bot/.env.example
+++ b/bot/.env.example
@@ -97,6 +97,35 @@ POR_INTERVAL_HOURS=
 ETH_PRICE_USD=3300
 
 # =============================================================================
+# KERNE Token Buyback Flywheel Configuration
+# =============================================================================
+# Automated daily buyback system that:
+# - Monitors Treasury WETH/USDC balances
+# - Executes Aerodrome swaps to buy KERNE tokens
+# - Burns purchased KERNE or sends to stakers
+# - Creates persistent deflationary pressure on token supply
+# - The "Liquidity Black Hole" - making KERNE the best store of value
+
+# Buyback thresholds (minimum balances before executing buyback)
+# WETH amount in wei (default: 0.1 ETH = 100000000000000000)
+BUYBACK_MIN_WETH=100000000000000000
+# USDC amount in 6 decimals (default: 250 USDC = 250000000)
+BUYBACK_MIN_USDC=250000000
+
+# Cooldown between buybacks in hours (default: 24 hours)
+BUYBACK_COOLDOWN_HOURS=24
+
+# Token addresses (Base Mainnet)
+WETH_ADDRESS=0x4200000000000000000000000000000000000006
+USDC_ADDRESS=0x833589fCD6eDb6E08f4c7C32D4f71b54bdA02913
+
+# Aerodrome Router (Base Mainnet)
+AERODROME_ROUTER=0xcF77a3Ba9A5CA399B7c97c74d54e5b1Beb874E43
+
+# Slippage tolerance in basis points (default: 500 = 5%)
+BUYBACK_SLIPPAGE_BPS=500
+
+# =============================================================================
 # Arbitrum Configuration
 # =============================================================================
 ARBITRUM_RPC_URL=https://arb1.arbitrum.io/rpc
