--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.462.0",
-    "next": "^15.1.4",
+    "next": "15.1.4",
     "next-themes": "^0.4.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -40,11 +40,11 @@
     "wagmi": "^2.14.7"
   },
   "devDependencies": {
-    "@types/three": "^0.165.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
+    "@types/three": "^0.165.0",
     "eslint": "^9",
     "eslint-config-next": "^15.1.4",
     "tailwindcss": "^4",
