[2026-02-07] bot: implement autonomous ProtonMail outreach via Bridge SMTP

--- a/bot/.env.example
+++ b/bot/.env.example
@@ -139,3 +139,21 @@ BASE_RPC_URL=https://mainnet.base.org
 # Alternative RPCs (used as fallback):
 # - https://base.llamarpc.com
 # - https://base.drpc.org
+
+# =============================================================================
+# ProtonMail Autonomous Outreach Configuration
+# =============================================================================
+# Sends institutional outreach emails to whale leads via ProtonMail Bridge.
+# Requires ProtonMail Bridge running locally: https://proton.me/mail/bridge
+#
+# Setup:
+# 1. Install ProtonMail Bridge and sign in with your kerne.systems account
+# 2. Bridge generates an app-specific SMTP password (NOT your ProtonMail password)
+# 3. Copy that password into PROTON_PASSWORD below
+# 4. Set AUTONOMOUS_OUTREACH=true to enable sending after lead scans
+
+PROTON_SMTP_HOST=127.0.0.1
+PROTON_SMTP_PORT=1025
+PROTON_EMAIL=contact@kerne.systems
+PROTON_PASSWORD=your_bridge_generated_password
+AUTONOMOUS_OUTREACH=false
