[2026-02-07] outreach: Support generic SMTP to bypass Proton Bridge paid requirement

--- a/bot/.env.example
+++ b/bot/.env.example
@@ -141,19 +141,24 @@ BASE_RPC_URL=https://mainnet.base.org
 # - https://base.drpc.org
 
 # =============================================================================
-# ProtonMail Autonomous Outreach Configuration
+# Autonomous Email Outreach Configuration
 # =============================================================================
-# Sends institutional outreach emails to whale leads via ProtonMail Bridge.
-# Requires ProtonMail Bridge running locally: https://proton.me/mail/bridge
+# Sends institutional outreach emails to whale leads via SMTP.
+# Supports Resend, SendGrid, or ProtonMail Bridge.
 #
-# Setup:
-# 1. Install ProtonMail Bridge and sign in with your kerne.systems account
-# 2. Bridge generates an app-specific SMTP password (NOT your ProtonMail password)
-# 3. Copy that password into PROTON_PASSWORD below
-# 4. Set AUTONOMOUS_OUTREACH=true to enable sending after lead scans
+# Setup (Resend.com - Recommended Free Path):
+# 1. Create a free account at https://resend.com
+# 2. Verify your domain (kerne.systems) in their dashboard
+# 3. Generate an API Key
+# 4. Set SMTP_HOST=smtp.resend.com, SMTP_PORT=465, SMTP_USER=resend, SMTP_PASS=your_api_key
+#
+# Setup (ProtonMail Bridge - Paid Path):
+# 1. Install ProtonMail Bridge (paid plan required)
+# 2. Set SMTP_HOST=127.0.0.1, SMTP_PORT=1025, SMTP_USER=contact@kerne.systems, SMTP_PASS=bridge_password
 
-PROTON_SMTP_HOST=127.0.0.1
-PROTON_SMTP_PORT=1025
-PROTON_EMAIL=contact@kerne.systems
-PROTON_PASSWORD=your_bridge_generated_password
+SMTP_HOST=smtp.resend.com
+SMTP_PORT=465
+SMTP_USER=resend
+SMTP_PASS=your_smtp_password_or_api_key
+FROM_EMAIL=contact@kerne.systems
 AUTONOMOUS_OUTREACH=false
