--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-tabs": "1.1.13",
     "@radix-ui/react-tooltip": "1.2.8",
     "@rainbow-me/rainbowkit": "2.2.10",
+    "@react-three/fiber": "8.18.3",
     "@tanstack/react-query": "5.0.0",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
@@ -31,17 +32,19 @@
     "recharts": "3.6.0",
     "sonner": "2.0.7",
     "tailwind-merge": "3.4.0",
+    "three": "0.171.0",
     "viem": "2.23.5",
     "wagmi": "2.19.5"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "4.0.0",
     "@types/node": "20.0.0",
     "@types/react": "18.3.0",
     "@types/react-dom": "18.3.0",
+    "autoprefixer": "10.4.20",
     "eslint": "9.0.0",
     "eslint-config-next": "16.1.1",
-    "tailwindcss": "4.0.0",
+    "postcss": "8.4.49",
+    "tailwindcss": "3.4.17",
     "typescript": "5.7.2"
   }
 }
