[2026-02-08] cloud: Deploy all 8 Docker services to DigitalOcean

--- a/bot/Dockerfile
+++ b/bot/Dockerfile
@@ -6,6 +6,7 @@ WORKDIR /app
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
     build-essential \
+    curl \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements and install
@@ -14,6 +15,9 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy bot code
 COPY . .
+
+# Ensure subdirectories exist (for volume mapping and runtime)
+RUN mkdir -p sentinel solver exchanges data reports
 
 # Run the bot
 CMD ["python", "main.py"]
