--- a/bot/requirements.txt
+++ b/bot/requirements.txt
@@ -8,4 +8,7 @@ numpy==1.26.4     # For numerical calculations
 scipy==1.12.0     # For statistical models (VaR)
 prometheus_client==0.19.0 # For metrics
 httpx==0.26.0      # For async HTTP
+hyperliquid-python-sdk==0.22.0 # For Hyperliquid interaction
+uvicorn==0.27.1    # For FastAPI server
+fastapi==0.109.2   # For Sentinel API
 
