--- a/package.json
+++ b/package.json
@@ -26,7 +26,11 @@
     "use-callback-ref": "^1.3.3",
     "use-sidecar": "^1.1.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/node": "^25.2.3",
+    "@types/react": "^19.2.14",
+    "typescript": "^5.9.3"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
