[2026-02-11] frontend: standardize card icons and maximize benchmark graph space

--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "detect-node-es": "^1.1.0",
     "get-nonce": "^1.0.1",
     "lucide-react": "^0.562.0",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
+    "next": "^16.1.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-remove-scroll": "^2.7.2",
     "react-remove-scroll-bar": "^2.3.8",
     "react-style-singleton": "^2.2.3",
