[2026-02-16] docs: Add Bagwell identity protocol across AGENTS.md README and operations docs

--- a/bot/.env
+++ b/bot/.env
@@ -72,9 +72,10 @@ OPENROUTER_API_KEY=sk-or-v1-a550e31771e8de7765df2fd98b469f793b1b483fd4f09b9461d6
 # =============================================================================
 # Autonomous Email Outreach Configuration
 # =============================================================================
+RESEND_API_KEY=re_eS8p2qd5_H3siiEWh4dTkDcRiTag19Z9F
 SMTP_HOST=smtp.resend.com
 SMTP_PORT=465
 SMTP_USER=resend
-SMTP_PASS=re_G7urZRtt_ECeWXXPyptk7MTEvscfm6vFK
-FROM_EMAIL=contact@kerne.systems
+SMTP_PASS=re_eS8p2qd5_H3siiEWh4dTkDcRiTag19Z9F
+FROM_EMAIL=team@kerne.ai
 AUTONOMOUS_OUTREACH=true
