--- a/bot/.env.example
+++ b/bot/.env.example
@@ -1,6 +1,28 @@
 HYPERLIQUID_PRIVATE_KEY=your_hyperliquid_private_key
 SOLVER_LIVE=true
 RPC_URL=https://base.llamarpc.com
+
+# =============================================================================
+# WebSocket RPC (required for V2 instant event-driven rebalancing)
+# Supports wss:// endpoints from Alchemy, Infura, QuickNode, Drpc, etc.
+# If blank, the bot falls back to HTTP polling every 10 s.
+# Example (Alchemy Base): wss://base-mainnet.g.alchemy.com/v2/<API_KEY>
+# Example (Drpc free):     wss://base.drpc.org
+# =============================================================================
+WS_URL=wss://base.drpc.org
+
+# =============================================================================
+# Circuit Breaker Configuration (Dynamic Hedge Rebalancing Engine V2)
+# These hard limits prevent over-hedging from any logic bug or RPC anomaly.
+# =============================================================================
+# CB1 — Max ETH notional that can be traded in a single cycle (default: 50 ETH)
+CB_MAX_TRADE_ETH=50.0
+# CB2 — Max allowed over-hedge as a ratio of active TVL (default: 1.05 = 5% over)
+CB_MAX_OVERHHEDGE_RATIO=1.05
+# CB3 — Minimum TVL sanity floor in ETH; ignore cycles below this (default: 0.1)
+CB_MIN_TVL_ETH=0.1
+# CB4 — Consecutive CB trips before panic/position close is triggered (default: 3)
+CB_MAX_TRIPS=3
 MIN_SCAN_INTERVAL=2.0
 STRATEGIST_PRIVATE_KEY=your_strategist_private_key
 PRIVATE_KEY=your_private_key
